# CoverReady

./: .env.example  .gitignore  README.md  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: Dockerfile
apps/api/alembic/: env.py
apps/api/coverready_api/: __init__.py  db.py  main.py  models.py
apps/web/: .env.local.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/jobs/: page.tsx
apps/web/components/: app-providers.tsx  app-shell.tsx  coverage-translator-client.tsx  document-viewer-drawer.tsx  evidence-detail-drawer.tsx  missing-documents-client.tsx  page-header.tsx  proof-drawer.tsx  proof-vault-client.tsx  scenario-simulator-client.tsx  score-dashboard-client.tsx  score-dimension-card.tsx  sidebar-nav.tsx  state-panels.tsx  status-chip.tsx  strength-badge.tsx  top-bar.tsx  upload-intake-client.tsx  workspace-context.tsx
apps/web/lib/: api.ts  live-records.ts  query-keys.ts  use-snapshot.ts  use-workspace-events.ts
demo/restaurant/: seed.json
docs/: architecture.md
infra/docker/: docker-compose.yml
scripts/: dedup_and_rescore.py  fix_fields_and_rescore.py  load_dataset.py
tests/: conftest.py
tests/api/: test_api_flows.py
tests/extraction/: test_fallback_policy.py  test_normalizer.py  test_upload_job_flow.py
tests/extraction/fixtures/: nemotron_ocr_maintenance_receipt.json  nemotron_parse_business_license.json  nemotron_parse_weak_scan.json  normalized_business_license.json
tests/scoring/: test_scoring_engine.py
(+71 files in other folders)
